--- a/package.json
+++ b/package.json
@@ -10,7 +10,9 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "git-commit-msg-linter": "^4.0.7"
+    "git-commit-msg-linter": "^4.0.7",
+    "husky": "^7.0.4",
+    "lint-staged": "^12.3.1"
   },
   "devDependencies": {
     "@types/node": "^17.0.10",
